# workbench-cli

./: .gitignore  Dockerfile  README.md  SARIF_ENHANCEMENT_GUIDE.md  api.cdx.json  augment-epss.cdx.json  augment.cdx.json  chaos.go  generate-epss-cisakev.cdx.json  generate-epss.cdx.json  generate.cdx.json  introduce-chaos.go  pyproject.toml  temp-lint-results.txt  temp-test-results.txt  vuln-report-epss.json  vuln-report.json  vulns-basic.sarif  vulns.json  workbench-cli.py
.github/workflows/: build-image.yml  git-diffscan-container.yml  git-diffscan.yml  linters.yml  main-pr-gate.yml  scan-dogfood  scan-dogfood.yml  scan-gate-branch.yml  scan-git-container.yml  scan-git-dogfood.yml  scan-git-script.yml  scan-main-branch.yml  scan-pr-head-diff.yml  scan-script.yml  test.ts  tests.yml  update-main-scan.yml  wb-scan-diff.yml
sbom-test-data/: cyclonedx-bom.json  spdx-document.rdf
src/workbench_agent/: __init__.py  api.py  cli.py  main.py  utils.py
src/workbench_cli/: __init__.py  cli.py  exceptions.py  main.py  utils.py
tests/: conftest.py  test_cli.py  test_scan_target_validators.py  test_utils.py  test_workbench.py
tests/api/: test_workbench_api.py  test_workbench_api_helpers.py
tests/fixtures/: cyclonedx-bom.json  spdx-document.rdf  test-sbom.json
tests/handlers/: conftest.py  test_download_reports_handler.py  test_evaluate_gates_handler.py  test_import_da_handler.py  test_scan_git_handler.py  test_scan_handler.py  test_show_results_handler.py
tests/integration/: conftest.py  test_download_reports_integration.py  test_evaluate_gates_integration.py  (+3 more)
(+102 files in other folders)
