[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench-cli"
version = "1.0.0"
description = "A CLI for interacting with scans and results in FossID Workbench via the Workbench API."
license = "MIT"
authors = [
  { name="Tomas Gonzalez", email="tomas@fossid.com" }
]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests>=2.20.0",
    "GitPython>=3.1.40",
]

[project.scripts]
workbench-cli = "workbench_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
]

[tool.setuptools.packages.find]
where = ["src"] 

[project.urls]
"Homepage" = "https://github.com/tomgonzo/workbench-cli"
"Bug Tracker" = "https://github.com/tomgonzo/workbench-cli/issues"
